<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.secretproject.photoprogress.activities.PhotoAlbumOverviewActivity"
    tools:showIn="@layout/activity_photo_album_overview">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albumNameTextViewLabel"
        android:text="@string/album_name_label" >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albumNameTextView"
        android:layout_toRightOf="@+id/albumNameTextViewLabel"
        android:editable="false">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albumDescriptionTextViewLabel"
        android:layout_below="@+id/albumNameTextViewLabel"
        android:text="@string/album_description_label" >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/albumDescriptionTextView"
        android:layout_toRightOf="@+id/albumDescriptionTextViewLabel"
        android:layout_below="@+id/albumNameTextView"
        android:editable="false">
    </TextView>

    <Button
        android:id="@+id/showVideoPreviewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/show_video_preview_button_content"
        android:layout_below="@+id/albumDescriptionTextViewLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableRight="@drawable/movie_x48px">
    </Button>

    <Button
        android:id="@+id/makeImagePostersBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/make_image_posters_button_content"
        android:layout_below="@+id/showVideoPreviewBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableRight="@drawable/images_x48px">
    </Button>

    <Button
        android:id="@+id/makeNewPhotoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/make_new_photo_button_content"
        android:layout_below="@+id/makeImagePostersBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableRight="@drawable/camera_x48px">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_album_button_content"
        android:id="@+id/editAlbumBtn"
        android:layout_below="@+id/makeNewPhotoBtn"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/makeNewPhotoBtn"
        android:layout_alignEnd="@+id/makeNewPhotoBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
