<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.secretproject.photoprogress.activities.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <!--tools:showIn="@layout/activity_photo_album_overview"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appDescriptionTxtView"
        android:text="@string/app_description_and_welcome_message">
    </TextView>

    <Button
        android:id="@+id/createNewAlbumBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_new_album_button_content"
        android:drawableRight="@drawable/new_x48px">
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:id="@+id/existingAlbumsContainerRelativeLayout"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/existingAlbumsHorizontalSV"
            android:scrollbars="none"
            android:layout_weight="1"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:id="@+id/existingAlbumsLinearLayout">
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/selectAlbumHelpTextView"
            android:text="@string/select_album_helping_text">
        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_album_overview_button_content"
            android:id="@+id/goToAlbumOverviewBtn"
            android:layout_marginTop="15dp"
            android:drawableRight="@drawable/ok_mark_x48px"
            android:enabled="false"
            >
        </Button>

    </LinearLayout>

</LinearLayout>